[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Popup.gd" type="Script" id=1]
[ext_resource path="res://open-sans/OpenSans-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 50
outline_color = Color( 0.862745, 0.290196, 0.290196, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[node name="Popup" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DescriptionLabel" type="Label" parent="."]
margin_left = 3.0
margin_top = 251.0
margin_right = 1026.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 1 )
text = "Highscore:"
align = 1
valign = 1

[node name="TopicLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 152.0
margin_right = 1025.0
margin_bottom = 228.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Dodge This"
align = 1

[node name="StartButton" type="Button" parent="."]
margin_left = 320.762
margin_top = 370.881
margin_right = 699.762
margin_bottom = 456.881
custom_fonts/font = SubResource( 4 )
text = "Start"

